<resources>
    <string name="app_name">HDM</string>
    <string name="processing">Processing</string>
    <string name="queue">Queue</string>
    <string name="completed">Completed</string>
    <string name="newdownload">New download</string>
    <string name="startAll">Start All</string>
    <string name="stopAll">Stop All</string>
    <string name="selectAll">Select All</string>
    <string name="deselectAll">Deselect All</string>
    <string name="invertSelection">Invert Selection</string>
    <string name="clearAll">Clear All</string>
    <string name="enterUrl">Enter URL</string>
    <string name="savePath">Save Path</string>
    <string name="downloadAutomatically">Download Automatically</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="chooseADirectory">choose a directory</string>
    <string name="select">Select</string>
    <string name="SDCard">SDCard</string>
    <string name="inMem">inMem</string>
    <string name="language">Language</string>
    <string name="vibration">Vibration</string>
    <string name="downloadSavePath">Download save path</string>
    <string name="simultaneousDownloads">Simultaneous downloads</string>
    <string name="scheduler">Scheduler</string>
    <string name="Settings">Settings</string>
    <string name="importList">Import List</string>
    <string name="exportList">Export List</string>
    <string name="aboutUs">About us</string>
    <string name="addressIsInvalid">Address is invalid!</string>
    <string name="fileIsDuplicate">file is duplicate</string>
    <string name="notConnectedToInternetMessage">You are not connected to internet! please check your internet connection and try again.</string>
    <string name="alreadyDownloadedMessage">file is already downloaded</string>
    <string name="corruptedFileMessage">Unfortunately file is corrupted!</string>
    <string name="doneMessage">download is done</string>
    <string name="pauseMessage">download paused</string>
    <string name="fileNotExistMessage">file does not exist!</string>
    <string name="filenotdownloadedCompletely">file not downloaded completely</string>
    <string name="start">Start</string>
    <string name="pause">pause</string>
    <string name="stop">Stop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="folderName">Folder name</string>
    <string name="createFolder">Create folder</string>
    <string name="delete_from_memory">delete from memory</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hdm_download_manager">HDM Download Manager</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="copy">copy</string>
    <string name="path">Path:</string>
    <string name="date">Date:</string>
    <string name="downloaded">Downloaded :</string>
    <string name="total_size">Total Size:</string>
    <string name="state">Status</string>
    <string name="apply">apply</string>
    <string name="fc_no_directory">There is no directory here</string>
    <string name="open">Open</string>
    <string name="add_to_queue">add to queue</string>
    <string name="queue_options">queue options</string>
    <string name="redownload">redownload</string>
    <string name="delete">delete</string>
    <string name="properties">properties</string>
    <string name="en">English</string>
    <string name="fa">Persian</string>
    <string name="apply_alert">Do you want to apply changes? the application must be restarted!</string>
    <string name="applySuccessMessage">Changes applied successfully!</string>
    <string name="about_text">Programmed by Seyyed Hassan Saadat</string>
    <string name="confirm">OK</string>
    <string name="apply_alert_title">Apply alert</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="delete_alert_message">Do you want to delete this item(s)</string>
    <string name="url_copy_message">URL has been copied successfully</string>
    <string-array name="languages">
        <item>English</item>
        <item>Persian</item>
    </string-array>

</resources>
