<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_open"
        android:title="@string/open" />

    <item
        android:id="@+id/add_to_q"
        android:title="@string/add_to_queue"
        />
    <item
        android:title="@string/queue_options"
        >
        <menu>
            <group>
                <item
                    android:id="@+id/move_to_up"
                    android:title="move to up" />

                <item
                    android:id="@+id/move_to_down"
                    android:title="move to down" />
            </group>

        </menu>

    </item>

    <item
        android:id="@+id/item_redownload"
        android:title="@string/redownload" />
    <item
        android:id="@+id/item_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/item_prop"
        android:title="@string/properties" />
</menu>