<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_delete_dialog">

    <TextView
        android:id="@+id/tv_delete_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#312f2f"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/cb_delete_from_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_delete_question"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/delete_from_memory" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_below="@id/cb_delete_from_memory"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/btn_no"
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>