<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="@color/newdownload_dialog_bgColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/input_url"
            android:layout_height="match_parent"
            android:layout_weight="90">

            <android.support.design.widget.TextInputEditText
                android:scrollbarStyle="outsideInset"
                android:scrollIndicators="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:hint="@string/enterUrl" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/cb_validity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:padding="5dp"
            tools:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:id="@+id/input_path"
            android:layout_height="match_parent"
            android:layout_weight="85">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:inputType="textMultiLine"
                android:hint="@string/savePath" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_browes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="15"
            android:text="..."
            android:textAllCaps="false" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/auto_download_checkbox"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/downloadAutomatically" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>