<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/sw_vibration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:text="@string/vibration" />

        <TextView
            android:layout_marginBottom="5dp"
            android:text="@string/simultaneousDownloads"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <SeekBar
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="5"
                android:text="@string/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/sp_lang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="bottom" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/downloadSavePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:id="@+id/input_path"
                android:layout_height="match_parent"
                android:layout_weight="85">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/st_input_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Save path"
                        android:inputType="textMultiLine"
                        android:lines="4" />
                </ScrollView>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_browse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="15"
                android:text="..."
                android:textAllCaps="false" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apply" />


    </LinearLayout>
</ScrollView>